@@ -1,2 +1,2 @@
-int(1,1) newline
-eof
+INT(1,1) NEWLINE
+EOF
