@@ -2,6 +2,7 @@ DOMjudge Programming Contest Judging System
 
 Version 3.0.0 - SVN
 -------------------
+ - Fix specification of checktestdata script syntax.
 
 Version 3.0.0 Release Candidate 2 - 3 September 2009
 ----------------------------------------------------
